--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,10 @@
-body{
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    font-family: 'Inter',  'Roboto',;
+body {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: "Inter", "Roboto";
+  overflow-y: scroll;
 }
+
+
