--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -1,5 +1,5 @@
-$primary-color: rgb(35, 60, 90); 
-$secondary-color: #4eafffd0;
+$primary-color: #233C5A ; 
+$secondary-color:#3c679b;
 $success-color: #28a745;
 $danger-color: #dc3545;
 $warning-color: #ffc107;
