--- a/src/pages/HeroPage/HeroPage.scss
+++ b/src/pages/HeroPage/HeroPage.scss
@@ -90,6 +90,7 @@
         font-size: 3rem;
         font-weight: bold;
         margin-bottom: 20px;
+        margin-top: 120px;
       }
   
       .hero-subtitle {
