--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -1,5 +1,7 @@
 $primary-color: #233C5A ; 
 $secondary-color:#3c679b;
+$tertiary-color:  #37c0ff;
+$tertiary-color-hover:  #018bad;
 $success-color: #28a745;
 $danger-color: #dc3545;
 $warning-color: #ffc107;
