navbar styling changes

--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -1,7 +1,9 @@
 $primary-color: #233C5A ; 
-$secondary-color:#3c679b;
-$tertiary-color:  #37c0ff;
-$tertiary-color-hover:  #018bad;
+$secondary-color:#227B94;
+$secondary-color-hover:#0056b3;
+$tertiary-color:  #78B7D0;
+$tertiary-color-hover:#0056b3;
+$primary-bg-color:#D7E4FF;
 $success-color: #28a745;
 $danger-color: #dc3545;
 $warning-color: #ffc107;
