--- a/src/App.scss
+++ b/src/App.scss
@@ -2,9 +2,8 @@ body {
   width: 100vw;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Inter", "Roboto";
-  overflow-y: scroll;
+  // overflow-y: scroll;
 }
-
 
