--- a/src/pages/HeroPage/HeroPageStyles.scss
+++ b/src/pages/HeroPage/HeroPageStyles.scss
@@ -72,7 +72,7 @@
             transition: background 0.3s ease;
   
             &:hover {
-              background:$secondary-color;
+              background:$secondary-color-hover;
               padding: 10px 15px;
             }
         }
@@ -108,7 +108,7 @@
           font-size: 1rem;
           font-weight: bold;
           color: #fff;
-          border-radius: 5px;
+          border-radius:10px;
           transition: background 0.3s ease;
           text-decoration: none;
   
