--- a/src/components/NavBar/NavBarStyles.scss
+++ b/src/components/NavBar/NavBarStyles.scss
@@ -28,28 +28,29 @@
       color: #fff;
       text-decoration: none;
       font-size: 1rem;
-      padding: 10px 20px;
+      padding: 10px 10px;
       margin-top: 10px;
       border-radius: 20px;
       font-family: "Inter", sans-serif;
     }
 
     .nav-item-sign-in {
-      background: $tertiary-color;
+      border: 2px solid  #f5f5f585;
       font-weight: 600;
       color: #fff;
-      padding: 10px 20px;
+      padding: 10px 10px;
       font-size: 1rem;
       border-radius: 20px;
       margin-top: 10px;
       font-family: "Inter", sans-serif;
       transition: background 0.3s ease;
       &:hover {
-        background: $tertiary-color-hover;
+        background-color: $secondary-color;
       }
     }
     .nav-item-sign-up {
-      background: $secondary-color;
+      border: 2px solid #f5f5f585;
+      font-weight: 600;
       color: #fff;
       padding: 10px 10px;
       border-radius: 20px;
@@ -58,7 +59,7 @@
       font-family: "Inter", sans-serif;
       transition: background 0.3s ease;
       &:hover {
-        background: $tertiary-color-hover;
+        background-color: $secondary-color;
       }
     }
   }
