featured consultant component creted

--- a/src/components/SideBar/SideBarStyles.scss
+++ b/src/components/SideBar/SideBarStyles.scss
@@ -6,6 +6,8 @@
   justify-content: start;
   align-items: center;
   width: 100vw;
+  position: fixed;
+  top: 0;
 }
 .nav-bar-right {
   margin-right: 5px;
