added make appoinment button for consultant card

--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -1,12 +1,8 @@
 $primary-color: #233C5A ; 
-$secondary-color:#227B94;
-$secondary-color-hover:#0056b3;
+$primary-color-hover: #192b42; 
+$secondary-color:#206c81;
+$secondary-color-hover:#103641;
 $tertiary-color:  #78B7D0;
 $tertiary-color-hover:#0056b3;
 $primary-bg-color:#D7E4FF;
-$success-color: #28a745;
-$danger-color: #dc3545;
-$warning-color: #ffc107;
-$info-color: #17a2b8;
 
-$primary-border-color: #000;
