--- a/src/components/SideBar/SideBarStyles.scss
+++ b/src/components/SideBar/SideBarStyles.scss
@@ -28,7 +28,7 @@
   border: 2px solid #f5f5f5be;
   border-radius: 10px;
   &:hover {
-    background-color: $secondary-color;
+    background-color: $primary-color-hover;
   }
 }
 
@@ -48,7 +48,7 @@
   color: #f5f5f5;
 
   &:hover {
-    background-color: $secondary-color;
+    background-color: $primary-color-hover;
   }
 }
 
@@ -74,7 +74,7 @@
   color: #f5f5f5;
 
   :hover {
-    background: $secondary-color;
+    background: $primary-color-hover;
   }
 
 }
@@ -106,15 +106,15 @@
 }
 
 .nav-item a:hover {
-  background: $secondary-color;
+  background: $primary-color-hover;
   font-weight: bold;
 }
 
 .side-item a:hover {
-  background: $secondary-color;
+  background: $primary-color-hover;
   display: flex;
   align-items: center;
-  padding: 7px 7px;
+  padding: 6px 6px;
   width: 160px;
   list-style: none;
   height: 50px;
@@ -152,7 +152,7 @@ span {
 }
 
 .login-btn:hover {
-  background-color: $secondary-color; /* Darker blue on hover */
+  background-color: $primary-color-hover; /* Darker blue on hover */
 }
 
 .login-out-btn {
@@ -174,5 +174,5 @@ span {
 }
 
 .login-out-btn:hover {
-  background-color: $secondary-color; /* Darker blue on hover */
+  background-color: $primary-color-hover; /* Darker blue on hover */
 }
