--- a/src/components/ConsultantCard/ConsultantCardStyles.scss
+++ b/src/components/ConsultantCard/ConsultantCardStyles.scss
@@ -8,7 +8,7 @@
   text-align: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 15px;
-  width: 250px; /* Set a fixed width for the card */
+  width: 250px; 
   &:hover{
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.377);
   }
