--- a/src/pages/Consultants/ConsultantStyles.scss
+++ b/src/pages/Consultants/ConsultantStyles.scss
@@ -1,12 +1,23 @@
 @import "../../colors/systemColors.scss";
-.consultants-container{
-    width: 100%;
-    height: 100vh;
-    background-color: $primary-bg-color;
-    justify-content: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
 
+.consultants-container {
+  width: 100%;
+  height: 100%;
+  padding-top:85px;
+  padding-left: 80px;
+  padding-right: 80px;
+  margin-bottom: 10px;
+  background-color: $primary-bg-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .consult-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap:5px;
+    justify-content: space-between; 
+    padding-top:5px;
+  }
+}
