--- a/src/pages/Profile/CounsellorProfile/CounsellorProfileStyles.scss
+++ b/src/pages/Profile/CounsellorProfile/CounsellorProfileStyles.scss
@@ -1,4 +1,4 @@
-@import "../../colors/systemColors.scss";
+@import "../../../colors/systemColors.scss";
 .profile-container{
     width: 100%;
     height: 100vh;
