--- a/src/pages/Profile/ClientProfile/ProfileStyles.scss
+++ b/src/pages/Profile/ClientProfile/ProfileStyles.scss
@@ -53,6 +53,13 @@
           cursor: pointer;
         }
       }
+
+              h2 {
+          font-size: 35px;
+          font-weight: 700;
+          color: #272727;
+          margin-top: 25px;
+        }
     }
 
     .right-container {
@@ -63,16 +70,7 @@
       .bio-section {
         background-color: #eeebeb;
         border-radius: 12px;
-        padding: 20px;
-        padding-left: 60px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
-        h2 {
-          font-size: 35px;
-          font-weight: 700;
-          color: #272727;
-          margin-bottom: 15px;
-        }
 
         p {
           font-size: 17px;
