--- a/src/pages/Registration/ConsultantRegisterStyles.scss
+++ b/src/pages/Registration/ConsultantRegisterStyles.scss
@@ -1,20 +1,19 @@
-
 @import "../../colors/systemColors.scss";
+
 .registration-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   background-color: $primary-bg-color;
-
+  padding: 2rem;
 
   .registration-form {
     background-color: white;
     padding: 2rem;
     border-radius: 8px;
-    width: 40%;
+    width: 50%;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    margin-top: 135px;
+    margin-top: 120px;
     margin-bottom: 20px;
 
     h2 {
@@ -30,13 +29,14 @@
         label {
           font-weight: bold;
           margin-bottom: 0.5rem;
-          display: inline-block;
+          display: block;
         }
 
         input,
         textarea {
           width: 100%;
-          padding: 0.75rem;
+          height: 50%;
+          padding: 20px;
           border: 1px solid #ced4da;
           border-radius: 0.25rem;
           transition: border-color 0.3s;
@@ -44,6 +44,38 @@
           &:focus {
             border-color: #007bff;
             outline: none;
+          }
+        }
+
+        input[type="file"] {
+          padding: 0.4rem;
+        }
+
+
+
+        .psychiatrist{
+          display: flex;
+          label {
+            font-weight: bold;
+            display: block;
+          }
+  
+          input,
+          textarea {
+            width: 20%;
+            padding: 10px;
+            border: 1px solid #ced4da;
+            border-radius: 0.25rem;
+            transition: border-color 0.3s;
+          }
+          .radio-buttons {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+  
+            input[type="radio"] {
+              margin-right: 5px;
+            }
           }
         }
       }
@@ -61,7 +93,8 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
-        width: 50%;
+        width: 100%;
+        margin-top: 1rem;
 
         &:hover {
           background-color: #0056b3;
@@ -83,7 +116,7 @@
         }
       }
     }
-    .login-container{
+    .login-container {
       margin-top: 10px;
     }
   }
