add new counselor page implemented

--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -4,5 +4,5 @@ $secondary-color:#206c81;
 $secondary-color-hover:#103641;
 $tertiary-color:  #78B7D0;
 $tertiary-color-hover:#0056b3;
-$primary-bg-color:#D7E4FF;
+$primary-bg-color:#e9f0ff;
 
