--- a/src/pages/AddCounselor/AddCounselorStyles.scss
+++ b/src/pages/AddCounselor/AddCounselorStyles.scss
@@ -1,6 +1,8 @@
+
+
 @import "../../colors/systemColors.scss";
 
-.registration-container {
+.add-counselor-container {
   display: flex;
   justify-content: center;
   align-items: center;
