--- a/src/pages/HeroPage/HeroPageStyles.scss
+++ b/src/pages/HeroPage/HeroPageStyles.scss
@@ -112,7 +112,7 @@
             background:$tertiary-color;
   
             &:hover {
-              background:$tertiary-color-hover;
+              background:$secondary-color;
               border: 1px solid #f5f5f5be;
             }
           }
