--- a/src/pages/Profile/CounsellorProfile/CounsellorProfileStyles.scss
+++ b/src/pages/Profile/CounsellorProfile/CounsellorProfileStyles.scss
@@ -107,16 +107,20 @@
 
         button {
           display: inline-block;
-          padding: 12px 25px;
+          padding: 10px 20px;
           font-size: 16px;
-          background-color: #28a745;
+          background-color: $primary-color;
           color: white;
           border: none;
-          border-radius: 10px;
+          border-radius: 15px;
           cursor: pointer;
-          transition: background-color 0.3s, transform 0.2s;
           margin-top: 10px;
-        }
+
+          &:hover{
+            background-color: $primary-color-hover;
+          }
+
+}
 
         // Style when displaying information instead of inputs
         .bio-data-display {
