bokking page and payment summery view implemented

--- a/src/components/SideBar/SideBarStyles.scss
+++ b/src/components/SideBar/SideBarStyles.scss
@@ -19,6 +19,7 @@
 .nav-item {
   display: flex;
   margin-top: 8px;
+  margin-right:30px;
   justify-content: center;
   padding: 5px;
   margin-left: 10px;
