--- a/src/components/datepicker/DatePicker.scss
+++ b/src/components/datepicker/DatePicker.scss
@@ -1,11 +1,18 @@
+@import "../../colors/systemColors.scss";
 .date-picker {
-    margin-bottom: 20px;
-    
+    margin-bottom: 10px;
+    gap:20px;
+  }
+
+  label{
+    font-weight: bold;
+    color:  $font-color-gray;
   }
   
   .date-picker label {
     margin-right: 10px;
     font-size: 16px;
+    color:  $font-color-gray;
   }
   
 
