--- a/src/pages/Profile/ClientProfile/ProfileStyles.scss
+++ b/src/pages/Profile/ClientProfile/ProfileStyles.scss
@@ -3,7 +3,7 @@
 .profile-page {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   min-height: 100vh;
   background-color: $primary-bg-color;
