--- a/src/pages/Booking/BookingPageStyels.scss
+++ b/src/pages/Booking/BookingPageStyels.scss
@@ -116,7 +116,7 @@
       margin-bottom: 0.5rem;
 
       .slot-label {
-        font-weight: bold;
+        font-weight: 400;
         color: $font-color-gray;
       }
 
@@ -146,9 +146,9 @@
         background-color: $primary-bg-color;
         color: $font-color-gray;
         cursor: pointer;
-        font-weight: bold;
+        font-weight: 400;
         border-radius: 10px;
-        padding: 5px;
+        padding: 3px;
         width: fit-content;
       }
     }
