--- a/src/pages/DashBoard/DashboardStyles.scss
+++ b/src/pages/DashBoard/DashboardStyles.scss
@@ -30,6 +30,10 @@
     padding-left: 80px;
     padding-right: 80px;
     margin-bottom: 10px;
+    .recentAppoinemts{
+      display: flex ;
+      justify-content: space-between;
+    }
   }
 
   .consult-list {
