--- a/src/components/AppointmentCard/AppointmentCardStyles.scss
+++ b/src/components/AppointmentCard/AppointmentCardStyles.scss
@@ -1,3 +1,4 @@
+@import "../../colors/systemColors.scss";
 .appointment-card {
   background-color: #dfdfe0;
   border-radius: 8px;
@@ -6,7 +7,7 @@
   align-items: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   width: 370px;
-  margin: 5px;
+  margin: 8px;
   cursor: pointer;
 
   .profile-img {
@@ -36,26 +37,53 @@
       font-weight: 500;
     }
 
-    .appointment-status {
-      font-size: 0.9rem;
-      font-weight: 500;
-      padding: 5px 10px;
-      border-radius: 20px; /* Make it rounded */
-      color: #4e4e4e;
-      width: fit-content;
-      margin-top: 6px;
+    .join-section{
+      display: flex;
+      gap: 10px;
+      .appointment-status {
+        font-size: 0.9rem;
+        font-weight: 500;
+        padding: 5px 10px;
+        border-radius: 20px; 
+        color: #4e4e4e;
+        width: fit-content;
+        margin-top: 6px;
+        border: 3px solid #7a7d80;
+        
+      }
+  
+      .status-upcoming {
+        background-color: #0992e0d2;
+        border: 1.5px solid #7a7d80;
+      }
+  
+      .status-completed {
+        background-color: rgba(252, 207, 60, 0.856);
+        border: 1.5px solid #414242;
+      }
+      .status-today{
+        background-color: rgba(4, 226, 15, 0.562);
+        border: 1.5px solid #414242;
+      }
+  
+      .join-button{
+        background-color: $secondary-color;
+        border: 2px solid #9e9fa0;
+        border-radius: 20px;
+        color: #ffff;
+        width: 110px;
+        height:fit-content;
+        padding:10px;
+        font-weight: 500;
+        &:hover {
+          box-shadow: 0px 3px 3px rgba(58, 57, 57, 0.377);
+        }
+  }
     }
 
-    .status-upcoming {
-      background-color: #11eb44d2; /* Green background for upcoming */
-    }
-
-    .status-completed {
-      background-color: rgba(41, 144, 253, 0.725);
-    }
   }
 
   &:hover {
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.377);
+    box-shadow: 4px 4px 4px rgba(48, 48, 48, 0.377);
   }
 }
