--- a/src/pages/Appointments/AppointmentsStyles.scss
+++ b/src/pages/Appointments/AppointmentsStyles.scss
@@ -1,12 +1,19 @@
 @import "../../colors/systemColors.scss";
-.clients-container{
-    width: 100%;
-    height: 100vh;
+.appoinments-container{
+    width: 100vw;
+    height: 100%;
     background-color: $primary-bg-color;
     justify-content: center;
-    display: flex;
+    padding-top: 85px;
     justify-content: center;
-    align-items: center;
-    text-align: center;
+  
+    padding-left: 80px;
+    padding-right: 80px;
+    margin-bottom: 10px;
+
+    .appoinments{
+        display: flex ;
+        flex-wrap: wrap;
+    }
 }
 
