--- a/src/components/AppointmentCard/AppointmentCardStyles.scss
+++ b/src/components/AppointmentCard/AppointmentCardStyles.scss
@@ -123,9 +123,9 @@
         // Styles for disabled button
         &:disabled {
           background-color: #7a7d80;
-          color: #e9e9e9;
-          cursor: not-allowed;
-          opacity: 0.6;
+           color: #e9e9e9;
+           cursor: not-allowed;
+          // opacity: 0.6;
         }
 
         &:hover:enabled {
