--- a/src/components/SectionContainer/SectionContainerStyles.scss
+++ b/src/components/SectionContainer/SectionContainerStyles.scss
@@ -1,6 +1,7 @@
 // src/components/SectionContainer.scss
 
 .section-container {
+    width: 100%;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -10,9 +11,11 @@
   
   .section-title {
     font-size: 1.5rem;
-    margin-bottom: 18px;
+    margin-bottom: 20px;
+    margin-top: 10px;
     font-weight: 600;
     color: #333;
+    text-align: center;
   }
   
   .section-content {
