--- a/src/components/ChatRoom/JitisiMeetingStyles.scss
+++ b/src/components/ChatRoom/JitisiMeetingStyles.scss
@@ -1,14 +1,13 @@
 @import "../../colors/systemColors.scss";
-body{
-    overflow-y: hidden;
-}
+
 .meeting-container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: $primary-bg-color;
     padding-top:20px;
     padding-left:40px;
     padding-right:40px;
+    overflow-y: hidden;
 
     
 
