--- a/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
+++ b/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
@@ -1,5 +1,5 @@
-@import "../../colors/systemColors.scss";
-.appoinments-container{
+@import "../../../colors/systemColors.scss";
+.admin-appoinments-container{
     width: 100vw;
     height: 100%;
     background-color: $primary-bg-color;
