updated node dependecies and removed tailwind css configs

--- a/src/components/AppointmentCard/AppointmentCardStyles.scss
+++ b/src/components/AppointmentCard/AppointmentCardStyles.scss
@@ -1,4 +1,4 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 
 .appointment-card {
   background-color: #dfdfe0;
