--- a/src/components/ChatRoom/JitisiMeetingStyles.scss
+++ b/src/components/ChatRoom/JitisiMeetingStyles.scss
@@ -1,9 +1,9 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 
 .meeting-container{
     width: 100%;
     height: 100vh;
-    background-color: $primary-bg-color;
+    background-color: sysColors.$primary-bg-color;
     padding-top:20px;
     padding-left:40px;
     padding-right:40px;
