--- a/src/components/NavBar/NavBarStyles.scss
+++ b/src/components/NavBar/NavBarStyles.scss
@@ -1,11 +1,11 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 11px;
   height: 85px;
-  background-color: $primary-color;
+  background-color: sysColors.$primary-color;
   position: fixed;
   top: 0;
   width: 100%;
@@ -45,7 +45,7 @@
       font-family: "Inter", sans-serif;
       transition: background 0.3s ease;
       &:hover {
-        background-color: $secondary-color;
+        background-color: sysColors.$secondary-color;
       }
     }
     .nav-item-sign-up {
@@ -59,7 +59,7 @@
       font-family: "Inter", sans-serif;
       transition: background 0.3s ease;
       &:hover {
-        background-color: $secondary-color;
+        background-color: sysColors.$secondary-color;
       }
     }
   }
