--- a/src/pages/AddCounselor/AddCounselorStyles.scss
+++ b/src/pages/AddCounselor/AddCounselorStyles.scss
@@ -1,12 +1,11 @@
 
-
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 
 .add-counselor-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $primary-bg-color;
+  background-color: sysColors.$primary-bg-color;
   padding: 2rem;
 
   .registration-form {
