--- a/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
+++ b/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
@@ -1,12 +1,12 @@
-@import "../../../colors/systemColors.scss";
+@use '../../../colors/systemColors' as sysColors;
 .admin-appoinments-container{
     width: 100vw;
-    height: 100%;
-    background-color: $primary-bg-color;
-    justify-content: center;
+    height: 100vh;
+    background-color: sysColors.$primary-bg-color;
     padding-top: 85px;
     justify-content: center;
-  
+    align-items: center;
+    text-align: center;
     padding-left: 80px;
     padding-right: 80px;
     margin-bottom: 10px;
