--- a/src/pages/Appointments/ClientAppointments/ClientAppointmentsStyles.scss
+++ b/src/pages/Appointments/ClientAppointments/ClientAppointmentsStyles.scss
@@ -1,8 +1,8 @@
-@import "../../../colors/systemColors.scss";
+@use '../../../colors/systemColors' as sysColors;
 .appoinments-container{
     width: 100vw;
     height: 100%;
-    background-color: $primary-bg-color;
+    background-color: sysColors.$primary-bg-color;
     justify-content: center;
     padding-top: 85px;
     justify-content: center;
