--- a/src/pages/Appointments/CounselorAppointments/CounselorAppointmentsStyles.scss
+++ b/src/pages/Appointments/CounselorAppointments/CounselorAppointmentsStyles.scss
@@ -1,8 +1,8 @@
-@import "../../../colors/systemColors.scss";
+@use '../../../colors/systemColors' as sysColors;
 .counselor-appoinments-container{
     width: 100vw;
-    height: 100%;
-    background-color: $primary-bg-color;
+    height: 100vh;
+    background-color: sysColors.$primary-bg-color;
     justify-content: center;
     padding-top: 85px;
     justify-content: center;
