--- a/src/pages/Booking/BookingPageStyels.scss
+++ b/src/pages/Booking/BookingPageStyels.scss
@@ -1,4 +1,4 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 .booking-container {
   width: 100vw;
   height: 100%;
@@ -7,7 +7,7 @@
   padding-left: 80px;
   padding-right: 80px;
   margin-bottom: 10px;
-  background-color: $primary-bg-color;
+  background-color: sysColors.$primary-bg-color;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +75,7 @@
         font-size: 16px;
         font-weight: bold;
         margin-top: 1rem;
-        color: $font-color-gray;
+        color: sysColors.$font-color-gray;
       }
 
       label {
@@ -98,7 +98,7 @@
           font-size: 1.1rem;
           font-weight: bold;
           margin-top: 1rem;
-          color: $font-color-gray;
+          color: sysColors.$font-color-gray;
         }
 
         label {
@@ -117,7 +117,7 @@
 
       .slot-label {
         font-weight: 400;
-        color: $font-color-gray;
+        color: sysColors.$font-color-gray;
       }
 
       .slot-chips {
@@ -129,7 +129,7 @@
           margin: 8px;
           display: flex;
           align-items: center;
-          background-color:$secondary-color;
+          background-color:sysColors.$secondary-color;
           border-radius: 20px;
           padding: 0.5rem 1rem;
           color: #ffff;
@@ -143,8 +143,8 @@
       }
 
       .clear-all {
-        background-color: $primary-bg-color;
-        color: $font-color-gray;
+        background-color: sysColors.$primary-bg-color;
+        color: sysColors.$font-color-gray;
         cursor: pointer;
         font-weight: 400;
         border-radius: 10px;
@@ -174,7 +174,7 @@
         cursor: pointer;
         border-radius: 8px;
         &:hover {
-          background-color: $primary-bg-color;
+          background-color: sysColors.$primary-bg-color;
         }
       }
     }
@@ -182,7 +182,7 @@
       justify-content: space-between;
 
       button {
-        background-color: $secondary-color;
+        background-color: sysColors.$secondary-color;
         color: white;
         border: none;
         border-radius: 7px;
@@ -198,7 +198,7 @@
         margin-right: 20px;
         margin-top: 30px;
         &:hover {
-          background-color: $secondary-color-hover;
+          background-color: sysColors.$secondary-color-hover;
         }
       }
     }
