--- a/src/pages/Consultants/ConsultantStyles.scss
+++ b/src/pages/Consultants/ConsultantStyles.scss
@@ -1,4 +1,4 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 
 .consultants-container {
   width: 100%;
@@ -7,7 +7,7 @@
   padding-left: 80px;
   padding-right: 80px;
   margin-bottom: 10px;
-  background-color: $primary-bg-color;
+  background-color: sysColors.$primary-bg-color;
   display: flex;
   flex-direction: column;
   align-items: center;
