--- a/src/pages/DashBoard/ClientDashBoard/ClientDashboardStyles.scss
+++ b/src/pages/DashBoard/ClientDashBoard/ClientDashboardStyles.scss
@@ -1,10 +1,10 @@
-@import "../../../colors/systemColors.scss";
+@use '../../../colors/systemColors' as sysColors;
 
 .dashboard-container {
   width: 100%;
   height: 100%;
   padding-top: 85px;
-  background-color: $primary-bg-color;
+  background-color: sysColors.$primary-bg-color;
   display: flex;
   flex-direction: column;
   align-items: center;
