--- a/src/pages/MeetingPage/MeetingPageStyles.scss
+++ b/src/pages/MeetingPage/MeetingPageStyles.scss
@@ -1,9 +1,9 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 .meeting-page-container{
     width: 100%;
     height: 100%;
     min-width: 100vh;
-    background-color: $primary-bg-color;
+    background-color: sysColors.$primary-bg-color;
     justify-content: center;
     display: flex;
     justify-content: center;
