--- a/src/pages/Registration/ConsultantRegisterStyles.scss
+++ b/src/pages/Registration/ConsultantRegisterStyles.scss
@@ -1,10 +1,10 @@
-@import "../../colors/systemColors.scss";
+@use '../../colors/systemColors' as sysColors;
 
 .registration-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $primary-bg-color;
+  background-color: sysColors.$primary-bg-color;
   padding: 2rem;
 
   .registration-form {
