--- a/src/components/AppointmentCard/AppointmentCardStyles.scss
+++ b/src/components/AppointmentCard/AppointmentCardStyles.scss
@@ -1,7 +1,7 @@
 @use '../../colors/systemColors' as sysColors;
 
 .appointment-card {
-  background-color: #dfdfe0;
+  background-color: sysColors.$card-bg-color;
   border-radius: 8px;
   padding: 15px;
   display: flex;
