--- a/src/pages/DashBoard/AdminDashBoard/AdminDashBoardStyles.scss
+++ b/src/pages/DashBoard/AdminDashBoard/AdminDashBoardStyles.scss
@@ -1,11 +1,68 @@
 @use '../../../colors/systemColors' as sysColors;
-.admin-dashboard-container{
-    width: 100%;
-    height: 100vh;
-    background-color: sysColors.$primary-bg-color;
-    justify-content: center;
+
+.admin-dashboard-container {
+  width: 100%;
+  height: 100%;
+  background-color: sysColors.$primary-bg-color;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px;
+  padding-top: 150px;
+  box-sizing: border-box;
+
+  h1 {
+    // color: sysColors.$primary-text-color;
+    margin-bottom: 20px;
+  }
+
+  .stats-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    gap: 20px;
+  }
+
+  .stat-card {
+    background-color: sysColors.$card-bg-color;
+    color: sysColors.$font-color-gray;
+    border-radius: 8px;
+    padding: 20px;
+    width: 200px;
     text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+    h2 {
+      margin-bottom: 10px;
+      font-size: 18px;
+    }
+
+    p {
+      font-size: 24px;
+      font-weight: bold;
+    }
+  }
+
+  .charts-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 40px;
+
+    .chart {
+      width: 400px;
+      height: 450px;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+
+      h2 {
+        margin-bottom: 20px;
+        font-size: 18px;
+      }
+    }
+  }
 }
