Admin side appoinemnt management feature creted

--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -6,6 +6,13 @@ $tertiary-color:  #78B7D0;
 $tertiary-color-hover:#0056b3;
 $primary-bg-color:#e9f0ff;
 
+$primary-text-color:#233C5A;
 $font-color-gray:#4b5563;
 
 $card-bg-color:#f1f0f0;
+
+$button-bg-color:#233C5A;
+$button-hover-bg-color:#192b42;
+$table-header-bg-color:#233C5A;
+$danger-bg-color:#f56565;
+$danger-hover-bg-color:#e53e3e;
