--- a/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
+++ b/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
@@ -1,19 +1,46 @@
 @use '../../../colors/systemColors' as sysColors;
-.admin-appoinments-container{
-    width: 100vw;
-    height: 100vh;
-    background-color: sysColors.$primary-bg-color;
-    padding-top: 85px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding-left: 80px;
-    padding-right: 80px;
-    margin-bottom: 10px;
 
-    .appoinments{
-        display: flex ;
-        flex-wrap: wrap;
+.admin-appointments-container {
+  width: 100vw;
+  height: 100%;
+  background-color: sysColors.$primary-bg-color;
+  padding-top: 85px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 80px;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 80px;
+
+  h1 {
+    color: sysColors.$primary-text-color;
+    margin-bottom: 20px;
+  }
+
+  .filter-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      background-color: sysColors.$button-bg-color;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: sysColors.$button-hover-bg-color;
+      }
+
+      &.active {
+        background-color: sysColors.$secondary-color;
+      }
     }
+  }
 }
-
