--- a/src/pages/Applications/ApplicationsStyles.scss
+++ b/src/pages/Applications/ApplicationsStyles.scss
@@ -1,12 +1,104 @@
 @use '../../colors/systemColors' as sysColors;
-.applications-container{
-    width: 100%;
-    height: 100vh;
-    background-color: sysColors.$primary-bg-color;
-    justify-content: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
 
+.applications-container {
+  width: 100%;
+  height: 100%;
+  background-color: sysColors.$primary-bg-color;
+  padding-top: 85px;
+  padding-bottom: 85px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+  h1 {
+    color: sysColors.$primary-text-color;
+    margin-bottom: 20px;
+  }
+
+  .applications-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 80%;
+    justify-content: left;
+  }
+
+  .application-card {
+    background-color: sysColors.$card-bg-color;
+    color: sysColors.$primary-text-color;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    width: 80%;
+
+    h2 {
+      margin-bottom: 10px;
+      font-size: 18px;
+      padding:10px;
+    }
+
+    .application-details {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      padding:12px;
+
+      div {
+        width: 48%;
+        font-size: 14px;
+      }
+
+      .experience-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        textarea {
+          width: 60%;
+          height: 70px;
+          resize: none;
+          overflow-y: scroll;
+          border: 1px solid #ddd;
+          border-radius: 4px;
+          padding: 10px;
+          font-size: 14px;
+          background-color: #f9f9f9;
+          color: #333;
+        }
+      }
+    }
+
+    .actions {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
+
+      button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+
+        &:first-of-type {
+          background-color: sysColors.$button-bg-color;
+          color: #fff;
+
+          &:hover {
+            background-color: sysColors.$button-hover-bg-color;
+          }
+        }
+
+        &:last-of-type {
+          background-color: sysColors.$danger-bg-color;
+          color: #fff;
+
+          &:hover {
+            background-color: sysColors.$danger-hover-bg-color;
+          }
+        }
+      }
+    }
+  }
+}
