--- a/src/pages/DashBoard/AdminDashBoard/AdminDashBoardStyles.scss
+++ b/src/pages/DashBoard/AdminDashBoard/AdminDashBoardStyles.scss
@@ -31,6 +31,7 @@
     width: 200px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 2px solid #9e9d9d;
 
     h2 {
       margin-bottom: 10px;
