--- a/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
+++ b/src/pages/Appointments/AdminAppointments/AdminAppointmentsStyles.scss
@@ -3,6 +3,7 @@
 .admin-appointments-container {
   width: 100vw;
   height: 100%;
+  min-height: 100vh;
   background-color: sysColors.$primary-bg-color;
   padding-top: 85px;
   display: flex;
