couselor appoinemnt page created

--- a/src/colors/systemColors.scss
+++ b/src/colors/systemColors.scss
@@ -11,7 +11,7 @@ $font-color-gray:#4b5563;
 
 $card-bg-color:#f1f0f0;
 
-$button-bg-color:#233C5A;
+$button-bg-color:#78B7D0;
 $button-hover-bg-color:#192b42;
 $table-header-bg-color:#233C5A;
 $danger-bg-color:#f56565;
