--- a/src/pages/Appointments/CounselorAppointments/CounselorAppointmentsStyles.scss
+++ b/src/pages/Appointments/CounselorAppointments/CounselorAppointmentsStyles.scss
@@ -1,19 +1,105 @@
-@use '../../../colors/systemColors' as sysColors;
-.counselor-appoinments-container{
-    width: 100vw;
-    height: 100vh;
-    background-color: sysColors.$primary-bg-color;
-    justify-content: center;
-    padding-top: 85px;
-    justify-content: center;
-  
-    padding-left: 80px;
-    padding-right: 80px;
-    margin-bottom: 10px;
+@use "../../../colors/systemColors" as sysColors;
 
-    .appoinments{
-        display: flex ;
-        flex-wrap: wrap;
+.counselor-appointments-container {
+  width: 100%;
+  padding-top: 85px;
+  padding-left: 80px;
+  padding-right: 80px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  padding-bottom: 80px;
+  background-color: sysColors.$primary-bg-color;
+
+  h1 {
+    color: sysColors.$primary-text-color;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .appointments-section {
+    margin-bottom: 40px;
+
+    h2 {
+      color: sysColors.$primary-text-color;
+      margin-bottom: 20px;
     }
-}
 
+    .appointments-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: left;
+    }
+
+    .appointment-card {
+      background-color: sysColors.$card-bg-color;
+      color: sysColors.$primary-text-color;
+      border-radius: 8px;
+      padding: 20px;
+      width: 300px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+      }
+
+      .appointment-details {
+        h3 {
+          margin-bottom: 10px;
+          font-size: 18px;
+        }
+
+        p {
+          margin: 5px 0;
+          font-size: 14px;
+        }
+
+        button {
+          margin-top: 10px;
+          padding: 10px 20px;
+          border: none;
+          border-radius: 8px;
+          background-color: sysColors.$button-bg-color;
+          color: #fff;
+          cursor: pointer;
+          transition: background-color 0.3s;
+          &:hover {
+            background-color: sysColors.$button-hover-bg-color;
+          }
+        }
+      }
+    }
+  }
+
+  .filter-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      background-color: sysColors.$button-bg-color;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: sysColors.$button-hover-bg-color;
+      }
+
+      &.active {
+        background-color: sysColors.$secondary-color;
+      }
+    }
+  }
+}
