--- a/src/components/AppointmentCard/ClientAppointmentCard/ClientAppointmentCardStyles.scss
+++ b/src/components/AppointmentCard/ClientAppointmentCard/ClientAppointmentCardStyles.scss
@@ -1,14 +1,15 @@
-@use '../../colors/systemColors' as sysColors;
+@use '../../../colors/systemColors' as sysColors;
 
-.appointment-card {
+.client-appointment-card {
   background-color: sysColors.$card-bg-color;
   border-radius: 8px;
   padding: 15px;
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  width: 370px;
+  width: 360px;
   margin: 8px;
+  text-align: left;
   cursor: pointer;
 
   .profile-img {
@@ -26,7 +27,7 @@
 
   .details {
     width: 65%;
-    padding: 7px;
+    padding: 10px;
 
     .consultant-name {
       font-size: 1.2rem;
