--- a/src/pages/DashBoard/AdminDashBoard/AdminDashBoardStyles.scss
+++ b/src/pages/DashBoard/AdminDashBoard/AdminDashBoardStyles.scss
@@ -54,7 +54,7 @@
     .chart {
       width: 400px;
       height: 450px;
-      background-color: #fff;
+      background-color:sysColors.$card-bg-color;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
